--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
-          heroku_api_key: ${{secrets.add2d829-afb8-4d33-b597-3b0ff6ef8c1f}}
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "vulnerable-web-app-flestard" #Must be unique in Heroku
           heroku_email: "flestard@gmail.com"
           remote_branch: "master"
