--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "vulnerable-web-app-flestard" #Must be unique in Heroku
+          heroku_app_name: "vulnerable-web-app-flestard" #Must be unique in Heroku 1
           heroku_email: "flestard@gmail.com"
           remote_branch: "master"
           usedocker: true
