--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -20,3 +20,12 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      whit: 
+        proyectBaseDir:
+        Args: >
+        - Dsonar.proyectKey=${{ github.event.repository.name}}
+        - Dsonar.proyectNmae=${{ github.event.repository.name}}
+        - Dsonar.source=.
+        - Dsonar.sourceEncoding=UTF-8
+        
+          
